# resonance-personality

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/v1/: auth.py  config.py  events.py  quiz.py  recommend.py
backend/app/core/: calculator.py  config.py  security.py
backend/app/db/: session.py
backend/app/db/migrations/: env.py
backend/app/models/: __init__.py  quiz_record.py  test_result.py  user.py
backend/app/schemas/: __init__.py  common.py
backend/app/services/: llm_recommend.py
backend/data/: questions.json
backend/tests/: conftest.py  test_api.py  test_calculator.py
miniprogram/: index.html  package-lock.json  package.json  tsconfig.json
miniprogram/src/: App.vue  env.d.ts  manifest.json  pages.json  uni.scss
miniprogram/src/api/: recommend.ts  request.ts
miniprogram/src/components/: AudioController.vue  GuardianBeast.vue  PersonalityCard.vue  PosterCanvas.vue
miniprogram/src/composables/: useAudioPlayer.ts  useEventTracker.ts  usePersonalityCalc.ts
miniprogram/src/data/: dimensions.json  personalities.json  questions.json
miniprogram/src/pages/landing/: index.vue
miniprogram/src/pages/loading/: index.vue
miniprogram/src/pages/privacy/: index.vue
miniprogram/src/pages/quiz/: index.vue
miniprogram/src/pages/result/: index.vue
miniprogram/src/static/images/: cover-bg-b64.txt
miniprogram/src/stores/: quizStore.ts  resultStore.ts  settingsStore.ts
